force-app/main/default/objects/SectorValue__c/SectorValue__c.object-meta.xml
<CustomObject>
    <description>This object houses all the Coverage Types and Primary, Secondary, and Tertiary Sector values.  These records are used in the Coverage Dependency object for the dependent picklists.</description>
    <label>Sector Value</label>
    <nameField>
        <label>Sector Value Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sector Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>