force-app/main/default/objects/SectorValue__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Active__c</columns>
    <columns>DependencyValue__c</columns>
    <columns>NAME</columns>
    <columns>UniqueKey__c</columns>
    <columns>Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>