force-app/main/default/objects/SectorValue__c/listViews/Coverage_Primary_Sector.listView-meta.xml
<ListView>
    <fullName>Coverage_Primary_Sector</fullName>
    <columns>Active__c</columns>
    <columns>NAME</columns>
    <columns>Value__c</columns>
    <columns>UniqueKey__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DependencyValue__c</field>
        <operation>equals</operation>
        <value>Primary</value>
    </filters>
    <label>Coverage Primary Sector</label>
</ListView>