force-app/main/default/objects/SectorValue__c/listViews/Coverage_Type.listView-meta.xml
<ListView>
    <fullName>Coverage_Type</fullName>
    <columns>Active__c</columns>
    <columns>NAME</columns>
    <columns>Value__c</columns>
    <columns>UniqueKey__c</columns>
    <columns>DependencyValue__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DependencyValue__c</field>
        <operation>equals</operation>
        <value>Type</value>
    </filters>
    <label>Coverage Type</label>
</ListView>